# RustOC2Template

./: README.md
project/: Cargo.toml  cargo.toml  rust-toolchain.toml
project/.cargo/: config.toml
project/src/: main.rs
toolchains/riscv64-lp64d-musl/: get_me_at.url
